# fieldstack

./: .env.example  .gitignore  IMPLEMENTATION.md  LICENSE  README.md  SECURITY_MONITORING.md  blueprint.md  eslint.config.js  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/workflows/: build-release.yml  security-audit.yml
src/: app.css
src-tauri/: Cargo.toml  audit.toml  entitlements.plist  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_fix_fk_and_counter.sql
src-tauri/src/: lib.rs  main.rs  overdue.rs  tests.rs
src-tauri/src/commands/: details.rs  drafts.rs  jobs.rs  mod.rs  org.rs  proofs.rs  reports.rs  settings.rs
src-tauri/src/db/: mod.rs  schema.sql
src/lib/components/organisms/: ActivityFeed.svelte  JobDetails.svelte  JobTable.svelte  JobWizard.svelte  Sidebar.svelte
src/lib/components/primitives/: Badge.svelte  Button.svelte  EmptyState.svelte  MiniBarChart.svelte  Pagination.svelte  Skeleton.svelte  StatCard.svelte
src/lib/stores/: dashboard.svelte.ts  jobs.svelte.ts  ui.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: invoke.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dashboard/: DashboardView.svelte
src/routes/jobs/: JobBoardView.svelte
src/routes/org/: OrgView.svelte
src/routes/reports/: ReportsView.svelte
src/routes/settings/: SettingsView.svelte
src/tests/: invoke.test.ts  jobs.store.test.ts
